// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag renders a flag with a custom stylePreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 0;
  color: #3358CC;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with a custom typographyPreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with an icon and custom iconSize 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(2, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 48px;
  height: 48px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-1 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-1 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1.emotion-1 {
  width: 16px;
  height: 16px;
}

.emotion-3 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <svg
      aria-hidden="true"
      class="emotion-1 emotion-2"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
    <span
      class="emotion-3"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with an icon and custom spacing between elements 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(2, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-1 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-1 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1.emotion-1 {
  width: 16px;
  height: 16px;
}

.emotion-3 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <svg
      aria-hidden="true"
      class="emotion-1 emotion-2"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
    <span
      class="emotion-3"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with custom presets when children is number 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 0;
  color: #3358CC;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with fixed for minWidth and minHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 100px;
  min-height: 100px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 100px;
  min-width: 100px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with fixed for width and height 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100px;
  height: 100px;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with no paddings 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-inline: 0;
  padding-block-start: 8px;
  padding-block-end: 8px;
  padding-block: 0;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 0;
  color: #3358CC;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with percentage for minWidth and minHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 100%;
  min-height: 100%;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 100%;
  min-width: 100%;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with percentage for width and height 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with token set for minWidth and minHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 160px;
  min-height: 160px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 160px;
  min-width: 160px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a flag with token set for width and height 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 160px;
  height: 160px;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a minimal flag with an icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(2, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-inline: 0;
  padding-block-start: 8px;
  padding-block-end: 8px;
  padding-block: 0;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 0;
  color: #3358CC;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-1 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-1 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1.emotion-1 {
  width: 16px;
  height: 16px;
}

.emotion-3 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <svg
      aria-hidden="true"
      class="emotion-1 emotion-2"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
    <span
      class="emotion-3"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders a solid flag with an icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(2, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-1 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-1 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1.emotion-1 {
  width: 16px;
  height: 16px;
}

.emotion-3 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <svg
      aria-hidden="true"
      class="emotion-1 emotion-2"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
    <span
      class="emotion-3"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders large Flag 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders medium Flag 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders small Flag 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 24px;
  -webkit-padding-start: 8px;
  padding-inline-start: 8px;
  -webkit-padding-end: 8px;
  padding-inline-end: 8px;
  padding-block-start: 4px;
  padding-block-end: 4px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders with default stylePreset if supplied with invalid value 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag renders with logical props overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  margin-block: 30px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 8px;
  padding-block-end: 8px;
  padding-block: 30px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 0;
  color: #FFFFFF;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="flag"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;
